<resources>
    <string name="app_name">YUMFOOD</string>
    <string name="trangchu">Trang chủ</string>
    <string name="donhang">Đơn hàng</string>
    <string name="yeuthich">Yêu thích</string>
    <string name="thongbao">Thông báo</string>
    <string name="toi">Tôi</string>
    <string name="menu">Menu</string>
    <string name="thongke">Thống kê</string>
    <string name="dangkyngay"><u>Đăng ký ngay</u></string>
    <string name="dangnhap"><u>Đăng nhập</u></string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hint_edit_text"><font size="12">Thêm thật nhiều quán của bạn nào</font> </string>
    <string name="home">Home</string>
    <string name="title_activity_order_confirmation">OrderConfirmationActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="titleDashboard">Dashboard</string>


</resources>