<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_home"
        android:title="@string/trangchu"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_24"/>
    <item android:id="@+id/nav_my_ords"
        android:title="@string/donhang"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_fastfood_24"/>
    <item android:id="@+id/nav_likes"
        android:title="@string/yeuthich"
        app:showAsAction="always"
        android:icon="@drawable/ic_heart_blank_24"/>
    <item android:id="@+id/nav_notifications"
        android:title="@string/thongbao"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_notifications_active_24"/>
    <item android:id="@+id/nav_me"
        android:title="@string/toi"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_setting_black_24dp"/>
</menu>